kubernetes_deployment/kube_load_balancer.yaml
# apiVersion: v1
# automountServiceAccountToken: true
# kind: ServiceAccount
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission
#   namespace: default
---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: Role
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission
#   namespace: default
# rules:
# - apiGroups:
#   - ""
#   resources:
#   - secrets
#   verbs:
#   - get
#   - create
---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRole
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission
# rules:
# - apiGroups:
#   - admissionregistration.k8s.io
#   resources:
#   - validatingwebhookconfigurations
#   verbs:
#   - get
#   - update
---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: RoleBinding
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission
#   namespace: default
# roleRef:
#   apiGroup: rbac.authorization.k8s.io
#   kind: Role
#   name: ingress-nginx-admission
# subjects:
# - kind: ServiceAccount
#   name: ingress-nginx-admission
#   namespace: default
---
# apiVersion: rbac.authorization.k8s.io/v1
# kind: ClusterRoleBinding
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission
# roleRef:
#   apiGroup: rbac.authorization.k8s.io
#   kind: ClusterRole
#   name: ingress-nginx-admission
# subjects:
# - kind: ServiceAccount
#   name: ingress-nginx-admission
#   namespace: default
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.14.0
  name: ingress-nginx-controller
  namespace: default
spec:
  externalTrafficPolicy: Local
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 172.166.225.54
  ports:
  - appProtocol: http
    name: http
    port: 65533
    protocol: TCP
    targetPort: http
  # - appProtocol: https
  #   name: https
  #   port: 443
  #   protocol: TCP
  #   targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: LoadBalancer
---
# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app.kubernetes.io/component: controller
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-controller-admission
#   namespace: default
# spec:
#   ports:
#   - appProtocol: https
#     name: https-webhook
#     port: 443
#     targetPort: webhook
#   selector:
#     app.kubernetes.io/component: controller
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#   type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.14.0
  name: ingress-nginx-controller
  namespace: default
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
      app.kubernetes.io/name: ingress-nginx
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: ingress-nginx
        app.kubernetes.io/name: ingress-nginx
        app.kubernetes.io/part-of: ingress-nginx
        app.kubernetes.io/version: 1.14.0
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - /nginx-ingress-controller
        - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
        - --election-id=ingress-nginx-leader
        - --controller-class=k8s.io/ingress-nginx
        - --ingress-class=nginx
        - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
        # - --validating-webhook=:8443
        # - --validating-webhook-certificate=/usr/local/certificates/cert
        # - --validating-webhook-key=/usr/local/certificates/key
        image: registry.k8s.io/ingress-nginx/controller:v1.14.0@sha256:e4127065d0317bd11dc64c4dd38dcf7fb1c3d72e468110b4086e636dbaac943d
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /wait-shutdown
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: controller
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        # - containerPort: 443
        #   name: https
        #   protocol: TCP
        # - containerPort: 8443
        #   name: webhook
        #   protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          requests:
            cpu: 100m
            memory: 90Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          readOnlyRootFilesystem: false
          runAsGroup: 82
          runAsNonRoot: true
          runAsUser: 101
          seccompProfile:
            type: RuntimeDefault
        # volumeMounts:
        # - mountPath: /usr/local/certificates/
        #   name: webhook-cert
        #   readOnly: true
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
      # volumes:
      # - name: webhook-cert
      #   secret:
      #     secretName: ingress-nginx-admission
---
# apiVersion: batch/v1
# kind: Job
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission-create
#   namespace: default
# spec:
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/component: admission-webhook
#         app.kubernetes.io/instance: ingress-nginx
#         app.kubernetes.io/name: ingress-nginx
#         app.kubernetes.io/part-of: ingress-nginx
#         app.kubernetes.io/version: 1.14.0
#       name: ingress-nginx-admission-create
#     spec:
#       automountServiceAccountToken: true
#       containers:
#       - args:
#         - create
#         - --host=ingress-nginx-controller-admission,ingress-nginx-controller-admission.$(POD_NAMESPACE).svc
#         - --namespace=$(POD_NAMESPACE)
#         - --secret-name=ingress-nginx-admission
#         env:
#         - name: POD_NAMESPACE
#           valueFrom:
#             fieldRef:
#               fieldPath: metadata.namespace
#         image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.4@sha256:bcfc926ed57831edf102d62c5c0e259572591df4796ef1420b87f9cf6092497f
#         imagePullPolicy: IfNotPresent
#         name: create
#         securityContext:
#           allowPrivilegeEscalation: false
#           capabilities:
#             drop:
#             - ALL
#           readOnlyRootFilesystem: true
#           runAsGroup: 65532
#           runAsNonRoot: true
#           runAsUser: 65532
#           seccompProfile:
#             type: RuntimeDefault
#       nodeSelector:
#         kubernetes.io/os: linux
#       restartPolicy: OnFailure
#       serviceAccountName: ingress-nginx-admission
#   ttlSecondsAfterFinished: 0
---
# apiVersion: batch/v1
# kind: Job
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission-patch
#   namespace: default
# spec:
#   template:
#     metadata:
#       labels:
#         app.kubernetes.io/component: admission-webhook
#         app.kubernetes.io/instance: ingress-nginx
#         app.kubernetes.io/name: ingress-nginx
#         app.kubernetes.io/part-of: ingress-nginx
#         app.kubernetes.io/version: 1.14.0
#       name: ingress-nginx-admission-patch
#     spec:
#       automountServiceAccountToken: true
#       containers:
#       - args:
#         - patch
#         - --webhook-name=ingress-nginx-admission
#         - --namespace=$(POD_NAMESPACE)
#         - --patch-mutating=false
#         - --secret-name=ingress-nginx-admission
#         - --patch-failure-policy=Fail
#         env:
#         - name: POD_NAMESPACE
#           valueFrom:
#             fieldRef:
#               fieldPath: metadata.namespace
#         image: registry.k8s.io/ingress-nginx/kube-webhook-certgen:v1.6.4@sha256:bcfc926ed57831edf102d62c5c0e259572591df4796ef1420b87f9cf6092497f
#         imagePullPolicy: IfNotPresent
#         name: patch
#         securityContext:
#           allowPrivilegeEscalation: false
#           capabilities:
#             drop:
#             - ALL
#           readOnlyRootFilesystem: true
#           runAsGroup: 65532
#           runAsNonRoot: true
#           runAsUser: 65532
#           seccompProfile:
#             type: RuntimeDefault
#       nodeSelector:
#         kubernetes.io/os: linux
#       restartPolicy: OnFailure
#       serviceAccountName: ingress-nginx-admission
#   ttlSecondsAfterFinished: 0
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.14.0
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
# apiVersion: admissionregistration.k8s.io/v1
# kind: ValidatingWebhookConfiguration
# metadata:
#   labels:
#     app.kubernetes.io/component: admission-webhook
#     app.kubernetes.io/instance: ingress-nginx
#     app.kubernetes.io/name: ingress-nginx
#     app.kubernetes.io/part-of: ingress-nginx
#     app.kubernetes.io/version: 1.14.0
#   name: ingress-nginx-admission
# webhooks:
# - admissionReviewVersions:
#   - v1
#   clientConfig:
#     service:
#       name: ingress-nginx-controller-admission
#       namespace: default
#       path: /networking/v1/ingresses
#       port: 443
#   failurePolicy: Fail
#   matchPolicy: Equivalent
#   name: validate.nginx.ingress.kubernetes.io
#   rules:
#   - apiGroups:
#     - networking.k8s.io
#     apiVersions:
#     - v1
#     operations:
#     - CREATE
#     - UPDATE
#     resources:
#     - ingresses
#   sideEffects: None
